updating the complete website

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fitlife - Work Hard To Get Better Life</title>
+  <title>Muscle Zone - Work Hard To Get Better Life</title>
 
   <!-- 
     - favicon
@@ -49,7 +49,7 @@
       <a href="#" class="logo">
         <ion-icon name="barbell-sharp" aria-hidden="true"></ion-icon>
 
-        <span class="span">Fitlife</span>
+        <span class="span">Muscle Zone</span>
       </a>
 
       <nav class="navbar" data-navbar>
@@ -194,7 +194,7 @@
                 </figure>
 
                 <div>
-                  <h3 class="h3 coach-name">Denis Robinson</h3>
+                  <h3 class="h3 coach-name">Haneen</h3>
 
                   <p class="coach-title">Our Coach</p>
                 </div>
@@ -555,7 +555,7 @@
           <a href="#" class="logo">
             <ion-icon name="barbell-sharp" aria-hidden="true"></ion-icon>
 
-            <span class="span">Fitlife</span>
+            <span class="span">Muscle Zone</span>
           </a>
 
           <p class="footer-brand-text">
@@ -626,7 +626,7 @@
             </div>
 
             <address class="address footer-link">
-              1247/Plot No. 39, 15th Phase, Colony, Kukatpally, Hyderabad
+              SKy court, Athavar, Manglore 575-020
             </address>
           </li>
 
@@ -636,9 +636,9 @@
             </div>
 
             <div>
-              <a href="tel:18001213637" class="footer-link">1800-121-3637</a>
+              <a href="tel:7899262109" class="footer-link">7899262109</a>
 
-              <a href="tel:+915552348765" class="footer-link">+91 555 234-8765</a>
+              <a href="tel:+91 7899262109" class="footer-link">7899262109</a>
             </div>
           </li>
 
@@ -648,9 +648,9 @@
             </div>
 
             <div>
-              <a href="mailto:info@fitlife.com" class="footer-link">info@fitlife.com</a>
+              <a href="mailto:info@Muscle Zone.com" class="footer-link">info@Muscle Zone.com</a>
 
-              <a href="mailto:services@fitlife.com" class="footer-link">services@fitlife.com</a>
+              <a href="mailto:services@Muscle Zone.com" class="footer-link">services@Muscle Zone.com</a>
             </div>
           </li>
 
@@ -706,7 +706,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2022 Fitlife. All Rights Reserved By <a href="#" class="copyright-link">codewithsadee.</a>
+          &copy; 2022 Muscle Zone. All Rights Reserved By <a href="#" class="copyright-link">Haneen.</a>
         </p>
 
         <ul class="footer-bottom-list">
