updated the name

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 </figure>
 
                 <div>
-                  <h3 class="h3 coach-name">Haneen</h3>
+                  <h3 class="h3 coach-name">Thanseer</h3>
 
                   <p class="coach-title">Our Coach</p>
                 </div>
@@ -636,9 +636,9 @@
             </div>
 
             <div>
-              <a href="tel:7899262109" class="footer-link">7899262109</a>
+              <a href="tel:+91 6361 670 114" class="footer-link">+91 6361 670 114</a>
 
-              <a href="tel:+91 7899262109" class="footer-link">7899262109</a>
+              <a href="tel:+91 6361 670 114" class="footer-link">+91 6361 670 114</a>
             </div>
           </li>
 
@@ -706,7 +706,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2022 Muscle Zone. All Rights Reserved By <a href="#" class="copyright-link">Haneen.</a>
+          &copy; 2022 Muscle Zone. All Rights Reserved By <a href="#" class="copyright-link">Thanseer.</a>
         </p>
 
         <ul class="footer-bottom-list">
